cluster/apps/dev/gitea-old/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
    #    nginx.ingress.kubernetes.io/auth-url: "http://authelia.networking.svc.cluster.local/api/verify"
    #    nginx.ingress.kubernetes.io/auth-signin: "https://login.${SECRET_DOMAIN}"
    hajimari.io/enable: "true"
    hajimari.io/icon: "git"
spec:
  rules:
    - host: "git.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: gitea
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "git.${SECRET_DOMAIN}"
